--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
         "drupal/console": "~1.0",
         "drupal/drupal-library-installer-plugin": "^0.3.0",
         "drupal/composer_deploy": "^1.0",
-        "drupal/adminimal_theme": "~1.1"
+        "drupal/adminimal_theme": "~1.1",
+        "drupal/admin_toolbar": "~1.17",
+        "drupal/toolbar_menu": "~1.3",
+        "drupal/adminimal_admin_toolbar": "~1.3"
     },
     "require-dev": {
       "heroku/heroku-buildpack-php": "*",
