--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "drupal/adminimal_theme": "~1.1",
         "drupal/admin_toolbar": "~1.17",
         "drupal/toolbar_menu": "~1.3",
-        "drupal/adminimal_admin_toolbar": "~1.3"
+        "drupal/adminimal_admin_toolbar": "~1.3",
+        "drupal/flysystem": "~1.0",
+        "drupal/flysystem_s3": "~1.0"
     },
     "require-dev": {
       "heroku/heroku-buildpack-php": "*",
