--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "drupal/toolbar_menu": "~1.3",
         "drupal/adminimal_admin_toolbar": "~1.3",
         "drupal/flysystem": "~1.0",
-        "drupal/flysystem_s3": "~1.0"
+        "drupal/flysystem_s3": "~1.0",
+        "drupal/redis": "^1.0@RC"
     },
     "require-dev": {
       "heroku/heroku-buildpack-php": "*",
