--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,15 @@
         "composer/installers": "^1.0.20",
         "drupal/core": "~8.2",
         "drupal/console": "~1.0",
+        "drush/drush": "^8.1",
         "drupal/drupal-library-installer-plugin": "^0.3.0",
-        "drupal/composer_deploy": "^1.0",
+        "drupal/redis": "^1.0@RC",
+        "drupal/flysystem": "~1.0",
+        "drupal/flysystem_s3": "~1.0",
         "drupal/adminimal_theme": "~1.1",
         "drupal/admin_toolbar": "~1.17",
         "drupal/toolbar_menu": "~1.3",
-        "drupal/adminimal_admin_toolbar": "~1.3",
-        "drupal/flysystem": "~1.0",
-        "drupal/flysystem_s3": "~1.0",
-        "drupal/redis": "^1.0@RC"
+        "drupal/adminimal_admin_toolbar": "~1.3"
     },
     "require-dev": {
       "heroku/heroku-buildpack-php": "*",
